# spatial_pipeline

./: .gitignore  README.MD  app.py  pyproject.toml  run_pipeline.py
src/spatial_pipeline/: __init__.py  binning.py  graphs.py  io.py  out_of_core.py
tests/: test_binning.py
