[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial_pipeline"
version = "0.1.0"
description = "A high-performance pipeline for spatial transcriptomics binning and adjacency graph generation."
readme = "README.md"
authors = [
    { name = "Gilberto Romero-Cano", email = "gilbertorcp712@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
    "polars>=0.19.0",
    "matplotlib>=3.5.0",
    "streamlit>=1.20.0",
    "plotly>=5.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
